# lol

./: .gitignore  Makefile  README.md  example.c  format.sh  lol.c  lol.h  meson.build  test.c  test2.c
configs/: lol.yaml.in  meson.build
include/: color.h  compiler-opt.h  core-config.h  core.h  log.h  lol-strings.h  parser.h
src/: core.c  log.c  lol-strings.c  meson.build  parser.c
